--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,22 +5,23 @@
               android:layout_height="match_parent"
               android:gravity="center">
 
-    <EditText
-            android:id="@+id/searchInputTxt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/search_text_hint"
-            android:layout_margin="32dp"/>
+  <EditText
+      android:id="@+id/searchInputTxt"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:hint="@string/search_text_hint"
+      android:layout_margin="32dp"/>
 
-    <Button
-            android:id="@+id/searchStartBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/search"/>
+  <Button
+      android:id="@+id/searchStartBtn"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/search"/>
 
-    <ProgressBar
-            android:id="@+id/searchProgressIndicator"
-            android:layout_width="32dp"
-            android:layout_height="32dp"/>
+  <ProgressBar
+      android:id="@+id/searchProgressIndicator"
+      android:layout_width="32dp"
+      android:layout_height="32dp"
+      android:visibility="gone"/>
 
 </LinearLayout>
